--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
 .body {
     background-image: url(https://lh3.googleusercontent.com/drive-viewer/AITFw-xAxGjZxuQ49oTSY_AvrljTxBivo0-1n6NzygL13n9SWEWkXzafnZsJZ50d4aura_t6-yG7WR4xILJ-nIZtvFwxvmEFwA=s1600);
+    background-color: brown;
 }
