--- a/home.css
+++ b/home.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600;700&display=swap');
+
+html {
+  font-family: 'Comfortaa', cursive;
+}
+
 body {
-    background-color: aqua;
+    background-color: azure;
+    margin: 0%;
   }
+
+h1 {
+  color: rgb(255, 255, 255);
+}
+h1,h2 {
+  margin-left: 10px;
+}
+
+.top_menu {
+  align-items: center;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
