--- a/home.css
+++ b/home.css
@@ -19,8 +19,8 @@ h1,h2 {
 
 .top_menu {
   align-items: center;
-  border-bottom-right-radius: 50px;
-  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
   width: 100vw;
 }
 
@@ -28,4 +28,18 @@ iframe {
   width: 100vw;
   height: 90vh;
   border-color: transparent;
+}
+
+div.page_block{
+
+   
+  width: 90vw;
+  margin-left: 1vw;
+  color: aliceblue;
+  background-color: rgb(1, 1, 36);
+  border-radius: 50px;
+  padding: 5px;
+  background-clip: padding-box;
+  box-shadow: inset 0 0 10px #8fa9ff;
+  
 }
