--- a/home.css
+++ b/home.css
@@ -14,7 +14,8 @@ h1 {
 }
 
 h1,h2 {
-  margin-left: 50px;
+  align-content: center;
+  margin: 10px;
 }
 
 .top_menu {
@@ -29,15 +30,16 @@ h1,h2 {
 
 
 div.page_block{
-
-   
+  position: relative;
+  left: 5%;
+  right: 50%;
+  display: inline-flex; 
   width: 90vw;
-  margin-left: 1vw;
+  margin-top: 10px;
   color: aliceblue;
-  background-color: rgb(1, 1, 36);
-  border-radius: 50px;
-  padding: 5px;
+  background-color: rgb(1, 1, 63);
+  border-radius: 20px;
   background-clip: padding-box;
-  box-shadow: inset 0 0 10px #8fa9ff;
+
   
 }
