--- a/o_css_da_pagina/home_style.css
+++ b/o_css_da_pagina/home_style.css
@@ -34,6 +34,9 @@ h1,h2,h3 {
 
 
 .page_block{
+  position: relative;
+  left: 100;
+  right: 100;
   display: inline-grid;
   min-width: 51vw;
   margin-left: 10px;
