--- a/o_css_da_pagina/home_style.css
+++ b/o_css_da_pagina/home_style.css
@@ -58,25 +58,40 @@ h1,h2,h3 {
   background-clip: padding-box;
   border-color: aqua;
   border: 20px;
-  padding-bottom: 10px;
 }
 
 
-.page_block_text {
+.page_block_text,.page_block_linked_text {
   display: block;
   text-align: center;
   padding: 10px;
   margin: auto;
+  border-radius: 20px;
 }
 .page_block_img {
   display: block;
   margin: auto;
   width: 50vw;
   max-width: 35vw;
+  bottom: 10px;
   border-radius: 20px;
-  padding-bottom: 10px;
+  
+  /*
+  outline: 2px solid #B54104;
+  outline-offset: 5px;
+  */
 }
 
+.page_block_img:hover,.sub_page_block:hover{
+  outline: 2px solid #ffffff88;
+  outline-offset: 5px;
+}
+
+.page_block_linked_text:hover{
+  outline: 2px solid chartreuse;
+  outline-offset: 5px;
+  color: chartreuse;
+}
 
 
 
