--- a/o_css_da_pagina/home_style.css
+++ b/o_css_da_pagina/home_style.css
@@ -4,17 +4,19 @@ html {
   display: block;
   gap: 50px 50px;
   font-family: 'Comfortaa', cursive;
-  background-color: rgb(0, 59, 47);
+  background-color: #006B24;
   grid-template-columns: 1;
 }
 
 .page_body {
-    background-color: rgb(0, 59, 47);
+  color: #FAFCFE;
+    font: 'Comfortaa';
+    background-color: #006B24;
     margin: 0%;
   }
 
 h1 {
-  color: rgb(255, 255, 255);
+  color: #FAFCFE;
 }
 
 h1,h2,h3 {
